<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search_hint"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/menu_lookup"
        app:showAsAction="collapseActionView"
        android:title="@string/menu_lookup"/>
    <item
        android:id="@+id/menu_pdfEquipment"
        app:showAsAction="collapseActionView"
        android:title="@string/menu_pdfEquipment"/>

    <item
        android:id="@+id/menu_about"
        app:showAsAction="collapseActionView"
        android:title="@string/about"/>

</menu>