<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_edit_equipment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveFloatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save_24dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/equipmentDateTxtInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/equipmentDateEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/equTypeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/equTypeTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/equ_type"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerEquType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tagPrefixLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tagPrefixTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tag_prefix"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerTagPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tagMiddleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tagMiddleEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_middle" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/tagSuffixLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tagSuffixTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tag_suffix"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerTagSuffix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/equManufacturerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/equManufacturerTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/equ_manufacturer"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerEquManufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/equSerialInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/equSerialEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/equ_serial" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
